gaia/iptables
*nat
:PREROUTING ACCEPT [0:0]
:INPUT ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
:POSTROUTING ACCEPT [0:0]
-A POSTROUTING -o eth0 -j MASQUERADE
COMMIT

*filter
:INPUT ACCEPT [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
:wan_to_gaia - [0:0]
:lan_to_gaia - [0:0]
:trusted_to_gaia - [0:0]

-A wan_to_gaia -p tcp -m tcp --dport 832 -m conntrack --ctstate NEW -j ACCEPT
-A wan_to_gaia -j DROP

-A lan_to_gaia -p udp --dport 53 -m conntrack --ctstate NEW -j ACCEPT
-A lan_to_gaia -p tcp --dport 53 -m conntrack --ctstate NEW -j ACCEPT
-A lan_to_gaia -p udp --dport 67 -m conntrack --ctstate NEW -j ACCEPT
-A lan_to_gaia -p icmp -j ACCEPT

-A trusted_to_gaia -p tcp -m tcp --dport 22 -m conntrack --ctstate NEW -j ACCEPT

-A FORWARD -i eth0 -o lan-bridge -m state --state RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -i lan-bridge -o eth0 -j ACCEPT
-A FORWARD -s 192.168.0.0/24 -j ACCEPT
-A FORWARD -o eth0 -m conntrack --ctstate NEW -j ACCEPT
-A FORWARD -i lo -j ACCEPT

-A INPUT -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A INPUT -i eth0 -j wan_to_gaia
-A INPUT -s 192.168.0.0/24 -g trusted_to_gaia
-A INPUT -i lan-bridge -g lan_to_gaia
-A INPUT -i lo -j ACCEPT
-A INPUT -j DROP
COMMIT
